@@ -4,17 +4,21 @@
 
 /* This file is generated and should not be modified.  See the makewrappers
  * script if you want to modify this. */
-static struct {
+typedef struct {
 	char *name;		/* the name */
 	int (**real)(void);	/* the underlying syscall */
 	int (*wrapper)(void);	/* the wrapper from guts/name.c */
-} pseudo_functions[] = {
+	char *version;		/* the version, if we know and care */
+} pseudo_function;
+
+static pseudo_function pseudo_functions[] = {
 @body
 	{ /* ${comment}; */
 		"${name}${maybe_inode64}",
 		(int (**)(void)) &real_${name},
-		(int (*)(void)) wrap_${name}
+		(int (*)(void)) wrap_${name},
+		${version}
 	},
 @footer
-	{ NULL, NULL, NULL },
+	{ NULL, NULL, NULL, NULL },
 };
